# rust_embedded_experiment

./: README.md
0-hello-world/: Cargo.toml
0-hello-world/src/: main.rs
1-bare-metal/: Cargo.toml
1-bare-metal/example/: 0-basicRegister.rs  1-led-button.rs  2-timer.rs  3-interuption.rs  4-testRegistreOverflow.rs
1-bare-metal/src/: main.rs
2-Peripheral-access-crate/: Cargo.toml
2-Peripheral-access-crate/example/: 0-helloWorldLed.rs  1-TimerInterupt.rs  2-PWM.rs  3-ADC.rs  4-UART.rs  6-jeuxLedButton.rs  7-interuptFallingEdge.rs  jeu1.c
2-Peripheral-access-crate/src/: main.rs
3-HAL-crate/: Cargo.toml
3-HAL-crate/.cargo/: .config.swp
3-HAL-crate/example/: USART.rs  capture.rs  example.rs
3-HAL-crate/src/: main.rs
4-can-stm32f103-rb/: Cargo.toml  README.md
4-can-stm32f103-rb/.cargo/: config.toml
4-can-stm32f103-rb/tests/: integration.rs
