[package]
edition = "2018"
name = "peripheral-access-crate"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.6"
panic-halt = "0.2.0"
# panic-abort = "0.3.2"

[dependencies.stm32f1]
version = "0.13.0"
features = ["stm32f103", "rt"]


# Access to the stm32f103 HAL.
#[dependencies.stm32f1xx-hal]
# we use "medium density" device
#features = ["stm32f103", "rt", "medium"]
#version = "^0.6.1"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "peripheral-access-crate"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
